--- a/ch03/ch03.ipynb
+++ b/ch03/ch03.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'LogisticRegression' from 'sklearn' (/Users/nasraddingozalli/anaconda3/envs/myenv310/lib/python3.10/site-packages/sklearn/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LogisticRegression\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'LogisticRegression' from 'sklearn' (/Users/nasraddingozalli/anaconda3/envs/myenv310/lib/python3.10/site-packages/sklearn/__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from sklearn import LogisticRegression"
@@ -44,9 +56,9 @@
     "        \"\"\"fit training data\n",
     "        Parameters\n",
     "        -------------\n",
-    "        X : {array-like} [n_observations, n_features]\n",
+    "        X : {array-like}, shape = [n_observations, n_features]\n",
     "\n",
-    "        y : array-like [n_observations]\n",
+    "        y : array-like, shape = [n_observations]\n",
     "\n",
     "        Return\n",
     "        --------\n",
@@ -87,8 +99,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.13"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
